<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_atualizar"
        android:orderInCategory="100"
        android:title="@string/action_atualizar"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filtrar"
        android:orderInCategory="100"
        android:title="@string/action_filtrar"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_configuracoes"
        android:orderInCategory="100"
        android:title="@string/action_configuracoes"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sair"
        android:orderInCategory="100"
        android:title="@string/action_sair"
        app:showAsAction="never" />
</menu>
