<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary"
    tools:context=".Login.Login">

    <ImageView
        android:layout_marginTop="@dimen/margin_login"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_login"
        android:layout_marginLeft="@dimen/margin_login"
        android:layout_marginRight="@dimen/margin_login">

        <EditText
            android:id="@+id/login_edtUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usu_rio"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_login"
        android:layout_marginRight="@dimen/margin_login"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/login_edtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/login_txtFgtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esqueci_a_senha"
        android:layout_marginEnd="@dimen/margin_login"
        android:layout_gravity="end"/>

    <Button
        android:id="@+id/login_btnLogn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/logar"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="@dimen/margin_login"
        android:layout_marginLeft="@dimen/margin_login"
        android:layout_marginRight="@dimen/margin_login"
        android:background="@drawable/rounded_button_theme_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_txtTrms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/termos_de_uso"
            android:layout_marginBottom="@dimen/margin_login"/>

    </LinearLayout>



</LinearLayout>